# django-activity-tracker

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: tests.yml
activity_tracker/: __init__.py  admin.py  admin_mixins.py  apps.py  constants.py  context.py  diff.py  drf.py  drf_mixins.py  exports.py  helpers.py  middleware.py  model_signals.py  models.py  redaction.py  services.py  settings.py  signals.py  utils.py
activity_tracker/migrations/: 0001_initial.py
docs/: checklist.md
tests/: settings.py  test_activity.py
