[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-activity-tracker"
version = "0.1.0"
description = "A Django pluggable app to track user activities."
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Rajat Jog", email = "rajatjog1294@gmail.com"}
]
dependencies = [
    "Django>=3.2"
]
[project.urls]
"Homepage" = "https://github.com/RJ-Gamer/django-activity-tracker"